--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,11 @@ services:
       - db:/var/lib/mysql
       - ./database/schema.sql:/docker-entrypoint-initdb.d/1.sql
       - ./database/data.sql:/docker-entrypoint-initdb.d/2.sql
+  app:
+    image: angular/frontend
+    build: ./frontend
+    command: "npm run start -- --host=0.0.0.0 --port=8080 --prod=true"
+    ports:
+      - 8080:8080
 volumes:
   db:
