--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,19 @@
 version: '3.8'
 services:
-  db:
+  mysql:
+    container_name: mysql
     image: mysql:8.0
     cap_add:
       - SYS_NICE
     restart: always
-    environment:
-      MYSQL_DATABASE: 'WatchOurMovieDB'
     env_file:
       - .env
     ports:
       - '3306:3306'
     expose:
       - '3306'
+    networks:
+      - networkName
     volumes:
       - db:/var/lib/mysql
       - ./database/schema.sql:/docker-entrypoint-initdb.d/1.sql
@@ -23,10 +24,27 @@ services:
     command: "npm run start -- --host=0.0.0.0 --port=8080 --configuration 'production' "
     ports:
       - 8080:8080
+    networks:
+      - networkName
+    env_file:
+      - .env
+    depends_on:
+      - back
   back:
     image: fastapi/backend
     build: ./backend
     ports:
       - 8000:8000
+    networks:
+      - networkName
+    env_file:
+      - .env
+    environment:
+      DATABASE_URL: mysql+mysqlconnector://${MYSQL_USER}:${MYSQL_PASSWORD}@mysql:3306/${MYSQL_DATABASE}
+    depends_on:
+      - mysql
+    restart: on-failure
 volumes:
   db:
+networks:
+  networkName:
