--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,6 @@
 FROM node:latest
 WORKDIR /opt/front
 COPY . /opt/front
+RUN npm install -g @angular/cli
 RUN npm install && npm run build
 EXPOSE 8080
