--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -45,7 +45,7 @@
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "10kb",
-                  "maximumError": "20kb"
+                  "maximumError": "20mb"
                 }
               ],
               "outputHashing": "all",
