Faster Docker File + Watched Model and Schema

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,5 +2,6 @@ FROM node:latest
 WORKDIR /opt/front
 COPY . /opt/front
 RUN npm install -g @angular/cli
-RUN npm install && npm run build
+RUN npm install
+# && npm run build
 EXPOSE 8080
